Fixing quantity selector and variant picker alignment

--- a/assets/custom-product.css
+++ b/assets/custom-product.css
@@ -532,3 +532,17 @@ fieldset.product-form__input--pill input[value*="Lavender" i]:checked+label::aft
 #product_just_stars .ind_cnt .sa_jump_to_reviews {
     color: #000000;
 }
+
+.product-form__input.product-form__quantity {
+    float: left;
+    width: 30%;
+}
+
+quantity-input.quantity {
+    width: 180px;
+}
+
+variant-radios.no-js-hidden {
+    float: right;
+    width: 60%;
+}
